syntax = "proto3";
package tinyfs;

option java_package = "com.tinyfs.auth";
option java_outer_classname = "ClientCredentialsProto";

message AccessCredentials {
  string name = 1;
  string fs_name = 2;
}

message ClientCredentials {
  string clientId = 1;
}
